--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -138,7 +138,7 @@
                     }
                 }
             }
-                @if(isOnPlayOffs){
+                @if(isOnPlayOffs && !isOnFinals && !isFinished){
                 <div class="mt-6">
                     <button class="bg-primary mt-2 rounded-lg text-slate-200 font-bold px-5 py-3 border-2 border-red-600 cursor-pointer" (click)="startPlayOffs()">Start Play Offs</button>
                 </div>
